--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/icons/Zoorig%20Profilbild.ico">
+  <link rel="icon" type="image/x-icon" href="assets/icons/website/Zoorig%20Profilbild.ico">
 </head>
 <body>
   <app-root></app-root>
